--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ djangorestframework==3.9.1
 gunicorn==19.9.0
 psycopg2-binary==2.7.7
 pytz==2018.9
+rest-framework-apicontrol==0.7.7
 six==1.12.0
 whitenoise==4.1.2
