Add default user related env vars
- add DEFAULT_USER_USERNAME env var to setenvvars.sh & app.json
- add DEFAULT_USER_PASSWORD env var to setenvvars.sh & app.json
- add DEFAULT_USER_EMAIL en var to setenvvars.sh & app.json

--- a/app.json
+++ b/app.json
@@ -16,6 +16,9 @@
     },
     "DEBUG": "False",
     "APP_HOST": "prioriza.herokuapp.com",
-    "INTERNAL_IP": "127.0.0.1"
+    "INTERNAL_IP": "127.0.0.1",
+    "DEFAULT_USER_USERNAME": "priorizate",
+    "DEFAULT_USER_PASSWORD": "etaziroirp",
+    "DEFAULT_USER_EMAIL": "user@domain.com"
   }
 }
